2019-12-19  Brent Fulgham  <bfulgham@apple.com>

        Deny mach lookup access to "com.apple.pluginkit.pkd" in the WebContent process
        https://bugs.webkit.org/show_bug.cgi?id=205421
        <rdar://problem/56995585>

        Reviewed by Per Arne Vollan.

        * fast/sandbox/ios/sandbox-mach-lookup-expected.txt:
        * fast/sandbox/ios/sandbox-mach-lookup.html:

2019-12-19  Chris Dumez  <cdumez@apple.com>

        Unreviewed, address imported/w3c/web-platform-tests/css/css-properties-values-api/url-resolution.html flakiness

        * TestExpectations:

2019-12-19  Chris Dumez  <cdumez@apple.com>

        Unreviewed, land iOS specific baseline missing from r253738.

        * platform/ios-wk2/imported/w3c/web-platform-tests/dom/events/Event-dispatch-redispatch-expected.txt: Added.

2019-12-19  Truitt Savell  <tsavell@apple.com>

        Folloup test expectations cleanup for r253594
        https://bugs.webkit.org/show_bug.cgi?id=205308

        Unreviewed test gardening.

        * platform/ios-wk2/TestExpectations:
        * platform/ios/TestExpectations:

2019-12-19  Truitt Savell  <tsavell@apple.com>

        REGRESSION: [ Mac Debug wk1 ] accessibility/mac/expanded-notification.html is a flaky failure
        https://bugs.webkit.org/show_bug.cgi?id=205410

        Unreviewed test gardening.

        * platform/mac-wk1/TestExpectations:

2019-12-19  Truitt Savell  <tsavell@apple.com>

        REGRESSION: [ Mojave Debug wk1 ] webgl/1.0.3/conformance/rendering/many-draw-calls.html is Timing out
        https://bugs.webkit.org/show_bug.cgi?id=205412

        Unreviewed test gardening.

        * platform/mac-wk1/TestExpectations:

2019-12-19  Chris Dumez  <cdumez@apple.com>

        imported/w3c/web-platform-tests/service-workers/service-worker/skip-waiting-installed.https.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=205408

        Reviewed by Youenn Fablet.

        Unskip test.

        * TestExpectations:
