@@ -2648,8 +2648,6 @@ imported/w3c/web-platform-tests/service-workers/service-worker/svg-target-reftes
 
 webkit.org/b/90980 fast/forms/textarea/textarea-state-restore.html [ Pass Timeout ]
 
-webkit.org/b/182928 http/tests/cache-storage/cache-representation.https.html [ Pass Failure ]
-
 webkit.org/b/116621 fast/replaced/preferred-widths.html [ Pass Failure ]
 
 webkit.org/b/184453 imported/w3c/web-platform-tests/workers/name-property.html [ Pass Failure ]
